--- a/sample/src/main/res/layout/activity_main.xml
+++ b/sample/src/main/res/layout/activity_main.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -9,43 +8,43 @@
 
     <LinearLayout
         android:id="@+id/button_container"
-        android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="80dp"
-        android:layout_alignParentBottom="true"
-        android:paddingBottom="12dp"
+        android:layout_gravity="bottom"
         android:clipChildren="false"
-        android:clipToPadding="false">
+        android:clipToPadding="false"
+        android:orientation="horizontal"
+        android:paddingBottom="12dp">
 
         <RelativeLayout
-            android:orientation="horizontal"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="2"
-            android:paddingRight="16dp"
+            android:clipToPadding="false"
+            android:orientation="horizontal"
             android:paddingEnd="16dp"
-            android:clipToPadding="false">
+            android:paddingRight="16dp">
 
             <android.support.design.widget.FloatingActionButton
                 android:id="@+id/skip_button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
-                android:layout_alignParentRight="true"
                 android:layout_alignParentEnd="true"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
                 android:hapticFeedbackEnabled="true"
                 android:src="@drawable/skip_red_24dp"
                 app:backgroundTint="@android:color/white"
                 app:fabSize="auto"
-                app:rippleColor="#22ED7563"/>
+                app:rippleColor="#22ED7563" />
 
         </RelativeLayout>
 
         <RelativeLayout
-            android:orientation="horizontal"
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_weight="1">
+            android:layout_weight="1"
+            android:orientation="horizontal">
 
             <android.support.design.widget.FloatingActionButton
                 android:id="@+id/rewind_button"
@@ -56,50 +55,45 @@
                 android:src="@drawable/rewind_blue_24dp"
                 app:backgroundTint="@android:color/white"
                 app:fabSize="mini"
-                app:rippleColor="#225BC9FA"/>
+                app:rippleColor="#225BC9FA" />
 
         </RelativeLayout>
 
         <RelativeLayout
-            android:orientation="horizontal"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="2"
+            android:clipToPadding="false"
+            android:orientation="horizontal"
             android:paddingLeft="16dp"
-            android:paddingStart="16dp"
-            android:clipToPadding="false">
+            android:paddingStart="16dp">
 
             <android.support.design.widget.FloatingActionButton
                 android:id="@+id/like_button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true"
+                android:layout_centerVertical="true"
                 android:hapticFeedbackEnabled="true"
                 android:src="@drawable/like_green_24dp"
                 app:backgroundTint="@android:color/white"
                 app:fabSize="auto"
-                app:rippleColor="#226FE2B3"/>
+                app:rippleColor="#226FE2B3" />
 
         </RelativeLayout>
 
     </LinearLayout>
 
-    <RelativeLayout
+    <com.yuyakaido.android.cardstackview.CardStackView
+        android:id="@+id/card_stack_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_above="@+id/button_container"
-        android:padding="20dp"
         android:clipToPadding="false"
-        android:clipChildren="false">
+        android:paddingBottom="100dp"
+        android:paddingEnd="20dp"
+        android:paddingStart="20dp"
+        android:paddingTop="20dp" />
 
-        <com.yuyakaido.android.cardstackview.CardStackView
-            android:id="@+id/card_stack_view"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-        </com.yuyakaido.android.cardstackview.CardStackView>
 
-    </RelativeLayout>
-
-</RelativeLayout>
+</FrameLayout>
